ingress-nginx-cert-manager/whoami.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  strategy: {}
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: containous/whoami:v1.3.0
        name: whoami
        ports:
        - containerPort: 80
        resources: {}
